--- a/templates/link.html
+++ b/templates/link.html
@@ -3,7 +3,7 @@
 	<article class=link style="">
 		<header><h3><a href="{URL}">{TITLE}</a></h3><span>({DOMAIN})</header>
 		<footer>
-		<span><span class="points" id={ID}>{POINTS}</span> <strong>::</strong> 
+		<span><span class="points" id=link{ID}>{POINTS}</span> <strong>::</strong> 
 			submitted {TIME} by <a href=user.php?id={USERID}>{USER}</a> to {CAT} {NSFW}</span> 
 		<span class=buttons>{COMMENTS} {BUTTONS} </span>
 		</footer>
