--- a/templates/comment.html
+++ b/templates/comment.html
@@ -1,9 +1,9 @@
-<li id=comment style="margin-left:{INDENT}em;">
+<li id=comment style="margin-left:{INDENT}em; opacity:1;">
 {ARROWS}
 <article class=comment >
 <header><a href=user.php?id={USERID}>{USER}</a> {TIME} <span class="points" id=comment{ID}>{POINTS}</span></header>
 <p>{TEXT}<br />
-<a class=reply id={ID} href="#">reply</a><br />
+{REPLY} {EDIT} {DELETE}<br />
 </p>
 {REPLYBOX}
 </article>
