--- a/templates/header.html
+++ b/templates/header.html
@@ -17,4 +17,4 @@
 <!--blank favicon-->
 
 <body>
-	<header class=top> :: diggit :: <a href="?order=new"> what's new? </a> <a href="?order=hot"> what's hot? </a> {SUBMIT} {LOGIN}</header>
+	<header class=top> :: diggit :: <a href="./?order=new"> what's new? </a> <a href="./?order=hot"> what's hot? </a> {SUBMIT} {LOGIN}</header>
