--- a/templates/link.html
+++ b/templates/link.html
@@ -2,6 +2,7 @@
 	{ARROWS}	
 	<article class=link style="">
 		<header><h3><a href="{URL}">{TITLE}</a></h3><span>({DOMAIN})</header>
+			<div class=linkedit>{EDITFORM}</div>
 		<footer>
 		<span><span class="points" id=link{ID}>{POINTS}</span> <strong>::</strong> 
 			submitted {TIME} by <a href=user.php?id={USERID}>{USER}</a> to {CAT} {NSFW}</span> 
