--- a/templates/comment.html
+++ b/templates/comment.html
@@ -1,7 +1,7 @@
-<li id=comment style="margin-left:{INDENT}em; opacity:1;">
+<li id=comment style="margin-left:{INDENT}em;" {DELETED}>
 {ARROWS}
 <article class=comment >
-<header><a href=user.php?id={USERID}>{USER}</a> {TIME} <span class="points" id=comment{ID}>{POINTS}</span></header>
+<header>{USER}{LINK} {TIME} <span class="points" id=comment{ID}>{POINTS}</span></header>
 <p>{TEXT}<br />
 {REPLY} {EDIT} {DELETE}<br />
 </p>
