--- a/templates/header.html
+++ b/templates/header.html
@@ -7,14 +7,12 @@
 </script>-->
 <title>diggit</title>
   <script src="js/jquery-1.7.1.min.js"></script>
-  <!--<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-  <script src="http://ui.jquery.com/latest/ui/effects.core.js"></script>-->
   <script src="js/diggit.js"></script>
 <link rel=stylesheet href=css/reset.css type=text/css>
 <link rel=stylesheet href=css/style.css type=text/css>
+
 <!--blank favicon-->
-	<link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
-<!--blank favicon-->
+<link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
 
 <body>
-	<header class=top> :: diggit :: <a href="./?order=new"> what's new? </a> <a href="./?order=hot"> what's hot? </a> {SUBMIT} {LOGIN}</header>
+	<nav class=top> <a class=diggit href="./">:: diggit ::</a>{CATEGORY} {NEW} {HOT} <!--<a href="./?order=new"> what's new? </a> <a href="./?order=hot"> what's hot? </a>--> {SUBMIT} {LOGIN}</nav>
