--- a/templates/comment.html
+++ b/templates/comment.html
@@ -1,10 +1,11 @@
 <li id=comment style="margin-left:{INDENT}em;" {DELETED}>
-{ARROWS}
-<article class=comment >
-<header>{USER}{LINK} {TIME} <span class="points" id=comment{ID}>{POINTS}</span></header>
-<p>{TEXT}<br />
-{REPLY} {EDIT} {DELETE}<br />
-</p>
-{REPLYBOX}
-</article>
+	{ARROWS}
+	<article class=comment>
+		<header>{USER}{LINK} {TIME} <span class="points" id=comment{ID}>{POINTS}</span></header>
+		<p>
+			{TEXT}<br />
+			{REPLY} {EDIT} {DELETE}<br />
+		</p>
+		{REPLYBOX}
+	</article>
 </li>
