--- a/templates/link.html
+++ b/templates/link.html
@@ -1,7 +1,7 @@
 <li id=link {LAST}>
 	{ARROWS}	
 	<article class=link style="">
-	<header><h3><a id={ID} href="{URL}">{TITLE}</a></h3><span>({DOMAIN})</header>
+	<header><h3><a id={ID} href="{URL}">{TITLE}</a></h3><span class=domain>({DOMAIN})</header>
 			<div class=linkedit>{EDITFORM}</div>
 		<footer>
 		<span><span class="points" id=link{ID}>{POINTS}</span> <strong>::</strong> 
