--- a/templates/header.html
+++ b/templates/header.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 <meta charset=utf8>
-<!--<script type="text/javascript">
-	var userid={USERID};
-</script>-->
-<title>diggit</title>
+
+<!--[if IE]>
+	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<!--[if lte IE 7]
+	<script src="js/IE8.js" type="text/javascript"></script><![endif]-->
+<!--[if lt IE 7]>
+
+	<link rel="stylesheet" type="text/css" media="all" href="css/ie6.css"/><![endif]-->
+
+	<title>diggit {TITLE}</title>
   <script src="js/jquery-1.7.1.min.js"></script>
   <script src="js/diggit.js"></script>
 <link rel=stylesheet href=css/reset.css type=text/css>
@@ -13,6 +19,6 @@
 
 <!--blank favicon-->
 <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
-
+</head>
 <body>
-	<nav class=top> <a class=diggit href="./">:: diggit ::</a>{CATEGORY} {NEW} {HOT} <!--<a href="./?order=new"> what's new? </a> <a href="./?order=hot"> what's hot? </a>--> {SUBMIT} {LOGIN}</nav>
+	<nav class=top> <a class=diggit href="./">:: diggit ::</a>{CATEGORY}{DOMAIN} {NEW} {HOT} {TOP} {SUBMIT} {LOGIN}</nav>
