--- a/templates/header.html
+++ b/templates/header.html
@@ -21,4 +21,4 @@
 <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
 </head>
 <body>
-	<nav class=top> <a class=diggit href="./">:: diggit ::</a>{CATEGORY}{DOMAIN} {NEW} {HOT} {TOP} {SUBMIT} {LOGIN}</nav>
+	<nav class=top> <a class=diggit href="./">:: diggit ::</a>{CATEGORY}{DOMAIN} {NEW} {HOT} {TOP} {SUBMIT} {CATS} {LOGIN}</nav>
