--- a/templates/header.html
+++ b/templates/header.html
@@ -6,19 +6,19 @@
 <!--[if IE]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <!--[if lte IE 7]
-	<script src="js/IE8.js" type="text/javascript"></script><![endif]-->
+	<script src="{PREFIX}js/IE8.js" type="text/javascript"></script><![endif]-->
 <!--[if lt IE 7]>
 
-	<link rel="stylesheet" type="text/css" media="all" href="css/ie6.css"/><![endif]-->
+	<link rel="stylesheet" type="text/css" media="all" href="{PREFIX}css/ie6.css"/><![endif]-->
 
-	<title>diggit {TITLE}</title>
+	<title>{SITE_TITLE} {PAGE_TITLE}</title>
   <script src="js/jquery-1.7.1.min.js"></script>
   <script src="js/diggit.js"></script>
-<link rel=stylesheet href=css/reset.css type=text/css>
-<link rel=stylesheet href=css/style.css type=text/css>
+<link rel=stylesheet href={PREFIX}css/reset.css type=text/css>
+<link rel=stylesheet href={PREFIX}css/style.css type=text/css>
 
 <!--blank favicon-->
 <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQEAYAAABPYyMiAAAABmJLR0T///////8JWPfcAAAACXBIWXMAAABIAAAASABGyWs+AAAAF0lEQVRIx2NgGAWjYBSMglEwCkbBSAcACBAAAeaR9cIAAAAASUVORK5CYII=" rel="icon" type="image/x-icon" />
 </head>
 <body>
-	<nav class=top> <a class=diggit href="./">:: diggit ::</a>{CATEGORY}{DOMAIN} {NEW} {HOT} {TOP} {SUBMIT} {CATS} {LOGIN}</nav>
+	<nav class=top><strong>{SITE_TITLE_LINK}{TITLE_LINK} {NEW} {HOT} {TOP} {SUBMIT} {CATS} <span class=login>{LOGIN}</span></strong></nav>
