--- a/templates/link.html
+++ b/templates/link.html
@@ -1,11 +1,11 @@
 <li id=link {LAST}>
 	{ARROWS}	
 	<article class=link style="">
-	<header><h3><a id={ID} href="{URL}">{TITLE}</a></h3><span class=domain>({DOMAIN})</header>
+	<header><h3>{LINK}</h3><span class=domain>({DOMAIN})</header>
 			<div class=linkedit>{EDITFORM}</div>
 		<footer>
 		<span><span class="points" id=link{ID}>{POINTS}</span> <strong>::</strong> 
-			submitted {TIME} by <a href=user.php?id={USERID}>{USER}</a> {CAT} {NSFW}</span> 
+			submitted {TIME} by {USER} {CAT} {NSFW}</span> 
 		<span class=buttons>{COMMENTS} {BUTTONS} </span>
 		</footer>
 	</article>
