--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -3,8 +3,8 @@
 	<span class=regtime>registered {REGTIME} - {POINTS}</span><br />
 	<nav>
 		<ul class=userinfo>
-			<li><a href=user.php?id={USERID}>{LINKS}</a></li>
-			<li><a href=user.php?id={USERID}&type=comments>{COMMENTS}</a></li>
+			<li>{LINKS}</li>
+			<li>{COMMENTS}</li>
 		</ul>
 	</nav>
 </header>
