add mod_rewrite support (including .htaccess file), reddit style base-36 encoding of link ids

--- a/templates/header.html
+++ b/templates/header.html
@@ -12,8 +12,9 @@
 	<link rel="stylesheet" type="text/css" media="all" href="{PREFIX}css/ie6.css"/><![endif]-->
 
 	<title>{SITE_TITLE} {PAGE_TITLE}</title>
-  <script src="js/jquery-1.7.1.min.js"></script>
-  <script src="js/diggit.js"></script>
+	
+	<script src="{PREFIX}js/jquery-1.7.1.min.js"></script>
+	<script src="{PREFIX}js/diggit.js"></script>
 <link rel=stylesheet href={PREFIX}css/reset.css type=text/css>
 <link rel=stylesheet href={PREFIX}css/style.css type=text/css>
 
